<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:translationZ="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/urlEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/urlEditHint"
            android:imeOptions="actionGo"
            android:inputType="textUri"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <ImageButton
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/album_title_tab"
            android:focusable="true"
            android:src="@drawable/button_refresh"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/webViewContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            app:srcCompat="@drawable/button_back" />

        <ImageButton
            android:id="@+id/goForward"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/bookmark"
            android:focusable="true"
            app:srcCompat="@drawable/button_forward" />

        <ImageButton
            android:id="@+id/drawerDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/dialog_negative_message"
            android:focusable="true"
            app:srcCompat="@drawable/button_menu" />

        <ImageButton
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/dialog_positive_message"
            android:focusable="true"
            app:srcCompat="@drawable/button_history" />

        <ImageButton
            android:id="@+id/tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/dialog_success"
            android:focusable="true"
            app:srcCompat="@drawable/button_navigation" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>