<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="192dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="56dp"
                android:contentDescription="@string/button_save_image"
                app:layout_collapseMode="pin"
                app:layout_collapseParallaxMultiplier="0.5"
                app:srcCompat="@drawable/ic_outline_wb_cloudy" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="bottom"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                app:layout_collapseMode="none">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/searchEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/search_hint"
                    android:imeOptions="actionGo"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:textAlignment="center"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <ImageButton
                    android:id="@+id/refreshNews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:background="#FFFFFF"
                    android:clickable="true"
                    android:contentDescription="@string/button_back"
                    android:focusable="true"
                    android:src="@drawable/button_refresh"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:navGraph="@navigation/navigation" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>